	- The database backend to use is now obtained from the world.mt file by default
	- Additional geometrical figures can be drawn on the map
		Similar to the circles drawn for origin and players. Supported figures
		are: point, line, rectangle, ellipse (circle), text.
		Translucency (alpha) is supported, although for ellipses, it does not
		work as expected (due to a bug in libgd)
	- A default color can be specified for invisible/undefined nodes in rendered
		blocks Normally, such nodes are not drawn, so they have the background
		color; If a different default color is specified, undefined/invisible
		nodes in defined blocks get the default color, and can be distinguished
		from undefined blocks (which still have the regular background color).

    Enhancements:
    	- Failure to process a command-line option now causes a specific error message.
		The generic help message is often not very helpful in such a case.
    	- The map origin color and Player colors can now be specified with an alpha value.
		Unfortunately, due to a bug in libgd, the effect is not what it should be...
	- The colors.txt file is now also searched for in the world's minetest directory
		(the directory containing minetest.conf) - if it can be found.
	- C++11 compilation is enabled if supported. If so, faster datastructures are used.
		instead of regular map, unordered_map is used where applicable
	- Colors used with drawalpha can now differ from colors used without drawalpha.
		Colors.txt can now have 'duplicate' entries for nodes, depending on whether alpha
		transparency is on or off.
		With 'drawalpha', a non-opaque color entry (with alpha less than 255) is
		preferred, whereas without 'drawalpha', a color entry with alpha 255
		(or unspecified alpha) is preferred.
		In all other cases, later entries override former entries in the colors file.
		The color of water with drawalpha was changed a little.
	- The sqlite3 backend is now optional and can be disabled during compilation.